--- a/vizitkarte.html
+++ b/vizitkarte.html
@@ -2,25 +2,27 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title></title>
+        <title>Vizitkarte</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="design.css">
-
-
     </head>
+
     <body>
         <div class="container">
-        <h1>Vizitkarte</h1>
-        <p>Mani sauc Mikhail, esmu RVT students<p>
-        <h2>Valodas</h2>
-        <p>
-            <li>Python</li>
-            <li>Java</li>
-            <p></p>
-        </p>
-        <img src="rvticon.png" alt="RVTicon">
+            <h1>Vizitkarte</h1>
+            <p>Mani sauc Mikhail, esmu RVT students</p>
+            <h2>Valodas</h2>
+                <li>Python</li>
+                <li>Java</li>
+            <img src="rvticon.png" alt="RVTicon">
+            
+            <div class="contact-info">
+                <span class="phone">+37184573856</span>
+                <span class="email">a231064mk@rvt.lv</span>
+            </div>
+        </div>
+
         <script src="" async defer></script>
-    </div>
     </body>
 </html>
